packable/packable-derive-test/tests/fail/invalid_verify_with_struct_type.stderr
error[E0308]: mismatched types
  --> tests/fail/invalid_verify_with_struct_type.rs:32:10
   |
32 | #[derive(Packable)]
   |          ^^^^^^^^
   |          |
   |          expected `&u64`, found `&Picky`
   |          arguments to this function are incorrect
   |
   = note: expected reference `&u64`
              found reference `&Picky`
note: function defined here
  --> tests/fail/invalid_verify_with_struct_type.rs:24:4
   |
24 | fn verify<const VERIFY: bool>(&value: &u64) -> Result<(), PickyError> {
   |    ^^^^^^                     ------------
   = note: this error originates in the derive macro `Packable` (in Nightly builds, run with -Z macro-backtrace for more info)
